# Minerva

./: .env  .env.example  .gitignore  Phase1.md  README.md  TechDoc.md  docker-compose.yml
.github/workflows/: docker-compose-build.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  backup.py  file.json  file.md  file.txt  final.py  pyproject.toml  reader.py  requirements.txt  requriements.txt  script.py  some.py  table.md
backend/alembic/: env.py
backend/alembic/versions/: 05323c24efc6_temp_fix.py  640c9b56802d_initial_migration.py  a1366f80ea44_add_file_path_column_to_pdfdocument_.py  b0db955f32e5_delete_content_column_to_pdfdocument.py  b4702dbd669d_update_pdfdoc_to_latest_sepcs.py  d859eabb8b4a_binary_to_path_based.py
backend/src/: config.py  converter.py  main.py  middleware.py
backend/src/db/: main.py  models.py
backend/src/error/: __init__.py
backend/src/fileupload/: error.py  file_manager.py  pdf_processor.py  router.py  service.py
backend/src/knowledge_graphs/: db_manager.py  graph_creation_service.py  repository.py  router.py  service.py
backend/src/newGraph/: router.py
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/dockershrink.out/: .dockerignore
frontend/src/app/: globals.css  layout.tsx  navbar.tsx  page.tsx
frontend/src/app/api-site/: page.tsx
frontend/src/app/buttons/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/home/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/markdown/: page.tsx
frontend/src/app/notebooks/: page.tsx
frontend/src/features/: SiteHeader.tsx
frontend/src/lib/: db.ts  utils.ts
frontend/src/store/: chat.ts
frontend/src/types/: graph.ts
go-service/: go.mod  go.sum  main.go
go-service/cmd/cli/: main.go
go-service/db/: db.go
go-service/docs/: docs.go  swagger.json  swagger.yaml
go-service/handlers/: handlers.go
go-service/models/: models.go
lightrag/: docker-compose.yml
lightrag/lightrag/: Dockerfile
lightrag/lightrag/llm/: openai.py
lightrag/lightrag_webui/: index.html
(+44 files in other folders)
